--- a/win-ngin.yml
+++ b/win-ngin.yml
@@ -1,5 +1,5 @@
 - name: Install and configure nginx on Windows
-  hosts: windows
+  hosts: 172.16.0.67
   tasks:
     - name: Download nginx
       ansible.windows.win_get_url:
