--- a/win-ngin.yml
+++ b/win-ngin.yml
@@ -4,12 +4,12 @@
     - name: Download nginx
       ansible.windows.win_get_url:
         url: https://nginx.org/download/nginx-1.18.0.zip
-        dest: C:\nginx.zip
+        dest: C:\User\Admin\Downloads\nginx.zip
 
     - name: Unzip nginx
       community.windows.win_unzip:
-        src: C:\nginx.zip
-        dest: C:\nginx
+        src: C:\User\Admin\Downloads\nginx.zip
+        dest: C:\User\Admin\Downloads\nginx
         creates: C:\nginx\nginx.exe
 
     - name: Ensure nginx is not installed
@@ -19,10 +19,10 @@
 
     - name: Install nginx
       ansible.windows.win_package:
-        path: C:\nginx\nginx-1.18.0.zip
+        path: C:\User\Admin\Downloads\nginx\nginx-1.18.0.zip
         state: present
 
     - name: Start nginx
       ansible.windows.win_command: |
-        C:\nginx\nginx.exe
+        C:\User\Admin\Downloads\nginx\nginx.exe
 
