--- a/win-ngin.yml
+++ b/win-ngin.yml
@@ -21,16 +21,29 @@
         Stop-Process -Name nginx -Force -ErrorAction SilentlyContinue
       ignore_errors: yes
 
+    - name: Uninstall nginx if installed
+      ansible.windows.win_shell: |
+        $nginx = Get-WmiObject -Class Win32_Product | Where-Object { $_.Name -eq "nginx" }
+        if ($nginx) { $nginx.Uninstall() }
+      register: uninstall_result
+      ignore_errors: yes
+
+    - name: Remove existing nginx files if any
+      ansible.windows.win_file:
+        path: C:\nginx
+        state: absent
+      when: uninstall_result is not skipped
+
+    - name: Recreate nginx directory
+      ansible.windows.win_file:
+        path: C:\nginx
+        state: directory
+
     - name: Unzip nginx
       community.windows.win_unzip:
         src: C:\User\Admin\Downloads\nginx.zip
         dest: C:\nginx
         creates: C:\nginx\nginx.exe
-
-    - name: Ensure nginx is not installed
-      ansible.windows.win_package:
-        name: nginx
-        state: absent
 
     - name: Start nginx
       ansible.windows.win_command: |
