--- a/win-ngin.yml
+++ b/win-ngin.yml
@@ -45,6 +45,16 @@
         dest: C:\nginx
         creates: C:\nginx\nginx.exe
 
+    - name: Verify nginx.exe exists
+      ansible.windows.win_stat:
+        path: C:\nginx\nginx.exe
+      register: nginx_exe
+
+    - name: Debug nginx.exe path
+      ansible.builtin.debug:
+        msg: "nginx.exe path: {{ nginx_exe.stat.path }}"
+
     - name: Start nginx
       ansible.windows.win_command: |
-        Start-Process -NoNewWindow -FilePath "C:\nginx\nginx.exe"
+        C:\nginx\nginx.exe
+      when: nginx_exe.stat.exists
