--- a/docker.yml
+++ b/docker.yml
@@ -1,11 +1,26 @@
 ---
-- name: Install Docker Desktop on Windows
+- name: Install and Start NGINX on Windows
   hosts: all
   tasks:
-    - name: Download Docker Desktop installer
-      ansible.windows.win_get_url:
-        url: https://desktop.docker.com/win/stable/Docker%20Desktop%20Installer.exe
-        dest: C:\Users\Admin\Downloads\DockerDesktopInstaller.exe
+    - name: Ensure NGINX directory exists
+      ansible.windows.win_file:
+        path: C:\nginx
+        state: directory
 
-    - name: Install Docker Desktop
-      ansible.windows.win_command: C:\Users\Admin\Downloads\DockerDesktopInstaller.exe /silent
+    - name: Download NGINX zip file
+      ansible.windows.win_get_url:
+        url: https://nginx.org/download/nginx-1.18.0.zip
+        dest: C:\nginx\nginx.zip
+
+    - name: Unzip NGINX
+      community.windows.win_unzip:
+        src: C:\nginx\nginx.zip
+        dest: C:\nginx
+        creates: C:\nginx\nginx-1.18.0\nginx.exe
+
+    - name: Start NGINX service
+      ansible.windows.win_service:
+        name: nginx
+        state: started
+        start_mode: auto
+        path: C:\nginx\nginx-1.18.0\nginx.exe
