--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -1,20 +1,48 @@
----
-- name: Download, Extract, and Install NGINX on Windows
+- name: Install and configure nginx on Windows
   hosts: 172.16.0.67
   tasks:
-    - name: Ensure download directory exists
+    - name: Ensure the download directory exists
       ansible.windows.win_file:
-        path: C:\Users\Admin\Downloads
+        path: C:\User\Admin\Downloads
         state: directory
 
-    - name: Download NGINX zip file
+    - name: Download nginx
       ansible.windows.win_get_url:
         url: https://nginx.org/download/nginx-1.18.0.zip
-        dest: C:\Users\Admin\Downloads\nginx.zip
+        dest: C:\User\Admin\Downloads\nginx.zip
 
-    - name: Extract NGINX zip file
+    - name: Ensure the nginx directory exists
+      ansible.windows.win_file:
+        path: C:\nginx
+        state: directory
+
+    - name: Ensure nginx is not running
       ansible.windows.win_shell: |
-        Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
+        Stop-Process -Name nginx -Force -ErrorAction SilentlyContinue
+      ignore_errors: yes
 
-    - name: Install NGINX
-      ansible.windows.win_command: C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe /S
+    - name: Uninstall nginx if installed
+      ansible.windows.win_shell: |
+        $nginx = Get-WmiObject -Class Win32_Product | Where-Object { $_.Name -eq "nginx" }
+        if ($nginx) { $nginx.Uninstall() }
+      register: uninstall_result
+      ignore_errors: yes
+
+    - name: Recreate nginx directory
+      ansible.windows.win_file:
+        path: C:\nginx
+        state: directory
+
+    - name: Unzip nginx
+      community.windows.win_unzip:
+        src: C:\User\Admin\Downloads\nginx.zip
+        dest: C:\nginx
+
+    - name: Debug nginx.exe existence
+      ansible.builtin.debug:
+        msg: "nginx.exe exists: {{ nginx_exe.stat.exists }}"
+
+    - name: Start nginx
+      ansible.windows.win_command: |
+        C:\nginx\nginx-1.8.0\nginx.exe
+      when: nginx_exe.stat.exists
