--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -1,60 +1,31 @@
+---
 - name: Install and configure nginx on Windows
   hosts: 172.16.0.67
   tasks:
     - name: Ensure the download directory exists
       ansible.windows.win_file:
-        path: C:\User\Admin\Downloads
+        path: C:\Users\Admin\Downloads
         state: directory
 
     - name: Download nginx
       ansible.windows.win_get_url:
         url: https://nginx.org/download/nginx-1.18.0.zip
-        dest: C:\User\Admin\Downloads\nginx.zip
+        dest: C:\Users\Admin\Downloads\nginx.zip
 
-    - name: Ensure the nginx directory exists
-      ansible.windows.win_file:
-        path: C:\nginx
-        state: directory
-
-    - name: Ensure nginx is not running
+    - name: Extract nginx
       ansible.windows.win_shell: |
-        Stop-Process -Name nginx -Force -ErrorAction SilentlyContinue
-      ignore_errors: yes
+        Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
 
-    - name: Uninstall nginx if installed
-      ansible.windows.win_shell: |
-        $nginx = Get-WmiObject -Class Win32_Product | Where-Object { $_.Name -eq "nginx" }
-        if ($nginx) { $nginx.Uninstall() }
-      register: uninstall_result
-      ignore_errors: yes
-
-    - name: Remove existing nginx files if any
-      ansible.windows.win_file:
-        path: C:\nginx
-        state: absent
-      when: uninstall_result is not skipped
-
-    - name: Recreate nginx directory
-      ansible.windows.win_file:
-        path: C:\nginx
-        state: directory
-
-    - name: Unzip nginx
-      community.windows.win_unzip:
-        src: C:\User\Admin\Downloads\nginx.zip
-        dest: C:\nginx
-        creates: C:\nginx\nginx.exe
-
-    - name: Verify nginx.exe exists
-      ansible.windows.win_stat:
-        path: C:\nginx\nginx-1.8.0\nginx.exe
-      register: nginx_exe
-
-    - name: Debug nginx.exe existence
-      ansible.builtin.debug:
-        msg: "nginx.exe exists: {{ nginx_exe.stat.exists }}"
-
-    - name: Start nginx
+    - name: Install nginx
       ansible.windows.win_command: |
-        C:\nginx\nginx-1.8.0\nginx.exe
-      when: nginx_exe.stat.exists
+        C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe /S
+      args:
+        chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
+      register: nginx_install_result
+
+    - name: Start nginx service
+      ansible.windows.win_service:
+        name: nginx
+        state: started
+        start_mode: auto
+      when: nginx_install_result.rc == 0  # Only start service if installation was successful
