--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -7,14 +7,26 @@
         path: C:\Users\Admin\Downloads
         state: directory
 
+    - name: Debug: Download directory exists
+      ansible.builtin.debug:
+        msg: "Download directory exists"
+
     - name: Download nginx
       ansible.windows.win_get_url:
         url: https://nginx.org/download/nginx-1.18.0.zip
         dest: C:\Users\Admin\Downloads\nginx.zip
 
+    - name: Debug: NGINX zip downloaded
+      ansible.builtin.debug:
+        msg: "NGINX zip downloaded"
+
     - name: Extract nginx
       ansible.windows.win_shell: |
         Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
+
+    - name: Debug: NGINX extracted
+      ansible.builtin.debug:
+        msg: "NGINX extracted"
 
     - name: Install nginx
       ansible.windows.win_command: |
@@ -22,6 +34,10 @@
       args:
         chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
       register: nginx_install_result
+
+    - name: Debug: NGINX installation result
+      ansible.builtin.debug:
+        var: nginx_install_result
 
     - name: Start nginx service
       ansible.windows.win_service:
