--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -1,47 +1,47 @@
----
-- name: Install and configure nginx on Windows
-  hosts: 172.16.0.67
-  tasks:
-    - name: Ensure the download directory exists
-      ansible.windows.win_file:
-        path: C:\Users\Admin\Downloads
-        state: directory
-
-    - name: Debug: Download directory exists
-      ansible.builtin.debug:
-        msg: "Download directory exists"
-
-    - name: Download nginx
-      ansible.windows.win_get_url:
-        url: https://nginx.org/download/nginx-1.18.0.zip
-        dest: C:\Users\Admin\Downloads\nginx.zip
-
-    - name: Debug: NGINX zip downloaded
-      ansible.builtin.debug:
-        msg: "NGINX zip downloaded"
-
-    - name: Extract nginx
-      ansible.windows.win_shell: |
-        Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
-
-    - name: Debug: NGINX extracted
-      ansible.builtin.debug:
-        msg: "NGINX extracted"
-
-    - name: Install nginx
-      ansible.windows.win_command: |
-        C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe /S
-      args:
-        chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
-      register: nginx_install_result
-
-    - name: Debug: NGINX installation result
-      ansible.builtin.debug:
-        var: nginx_install_result
-
-    - name: Start nginx service
-      ansible.windows.win_service:
-        name: nginx
-        state: started
-        start_mode: auto
-      when: nginx_install_result.rc == 0  # Only start service if installation was successful
+ 1  ---
+ 2  - name: Install and configure nginx on Windows
+ 3    hosts: 172.16.0.67
+ 4    tasks:
+ 5      - name: Ensure the download directory exists
+ 6        ansible.windows.win_file:
+ 7          path: C:\Users\Admin\Downloads
+ 8          state: directory
+ 9
+10      - name: Debug: Download directory exists
+11        ansible.builtin.debug:
+12          msg: "Download directory exists"
+13
+14      - name: Download nginx
+15        ansible.windows.win_get_url:
+16          url: https://nginx.org/download/nginx-1.18.0.zip
+17          dest: C:\Users\Admin\Downloads\nginx.zip
+18
+19      - name: Debug: NGINX zip downloaded
+20        ansible.builtin.debug:
+21          msg: "NGINX zip downloaded"
+22
+23      - name: Extract nginx
+24        ansible.windows.win_shell: |
+25          Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
+26
+27      - name: Debug: NGINX extracted
+28        ansible.builtin.debug:
+29          msg: "NGINX extracted"
+30
+31      - name: Install nginx
+32        ansible.windows.win_command: |
+33          C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe /S
+34        args:
+35          chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
+36        register: nginx_install_result
+37
+38      - name: Debug: NGINX installation result
+39        ansible.builtin.debug:
+40          var: nginx_install_result
+41
+42      - name: Start nginx service
+43        ansible.windows.win_service:
+44          name: nginx
+45          state: started
+46          start_mode: auto
+47        when: nginx_install_result.rc == 0  # Only start service if installation was successful
