--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -30,7 +30,7 @@
 
     - name: Install nginx
       ansible.windows.win_command: |
-        C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe /S
+        C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe
       args:
         chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
       register: nginx_install_result
