--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -28,8 +28,22 @@
       ansible.builtin.debug:
         msg: "NGINX extracted"
 
+    - name: Verify nginx.exe exists
+      ansible.windows.win_stat:
+        path: C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe
+      register: nginx_exe
+
+    - name: Debug - nginx.exe exists
+      ansible.builtin.debug:
+        var: nginx_exe
+
+    - name: Fail if nginx.exe does not exist
+      ansible.builtin.fail:
+        msg: "nginx.exe not found in the expected directory"
+      when: not nginx_exe.stat.exists
+
     - name: Install nginx
-      ansible.windows.win_command: |
+      ansible.windows.win_shell: |
         Start-Process -FilePath "C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe" -NoNewWindow -Wait
       args:
         chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
