--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -1,61 +1,15 @@
 ---
-- name: Install and configure nginx on Windows
-  hosts: 172.16.0.67
+- name: Ensure Nginx is running on Windows
+  hosts: windows
   tasks:
-    - name: Ensure the download directory exists
-      ansible.windows.win_file:
-        path: C:\Users\Admin\Downloads
-        state: directory
+    - name: Check if nginx.exe exists
+      win_shell: Test-Path -Path 'C:\\Users\\Admin\\Downloads\\nginx\\nginx-1.18.0\\nginx.exe'
+      register: path_exists
 
-    - name: Debug - Download directory exists
-      ansible.builtin.debug:
-        msg: "Download directory exists"
+    - name: Print path check result
+      debug:
+        var: path_exists
 
-    - name: Download nginx
-      ansible.windows.win_get_url:
-        url: https://nginx.org/download/nginx-1.18.0.zip
-        dest: C:\Users\Admin\Downloads\nginx.zip
-
-    - name: Debug - NGINX zip downloaded
-      ansible.builtin.debug:
-        msg: "NGINX zip downloaded"
-
-    - name: Extract nginx
-      ansible.windows.win_shell: |
-        Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
-
-    - name: Debug - NGINX extracted
-      ansible.builtin.debug:
-        msg: "NGINX extracted"
-
-    - name: Verify nginx.exe exists
-      ansible.windows.win_stat:
-        path: C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe
-      register: nginx_exe
-
-    - name: Debug - nginx.exe exists
-      ansible.builtin.debug:
-        var: nginx_exe
-
-    - name: Fail if nginx.exe does not exist
-      ansible.builtin.fail:
-        msg: "nginx.exe not found in the expected directory"
-      when: not nginx_exe.stat.exists
-
-    - name: Install nginx
-      ansible.windows.win_shell: |
-        Start-Process -FilePath "C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe" -NoNewWindow -Wait
-      args:
-        chdir: C:\Users\Admin\Downloads\nginx\nginx-1.18.0
-      register: nginx_install_result
-
-    - name: Debug - NGINX installation result
-      ansible.builtin.debug:
-        var: nginx_install_result
-
-    - name: Start nginx service
-      ansible.windows.win_service:
-        name: nginx
-        state: started
-        start_mode: auto
-      when: nginx_install_result.rc == 0  # Only start service if installation was successful
+    - name: Start Nginx if executable exists
+      win_shell: Start-Process -FilePath 'C:\\Users\\Admin\\Downloads\\nginx\\nginx-1.18.0\\nginx.exe' -NoNewWindow -Wait
+      when: path_exists.stdout == "True"
