--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -1,15 +1,36 @@
 ---
-- name: Ensure Nginx is running on Windows
-  hosts: 172.16.0.62
+- name: Install and configure Nginx on Windows
+  hosts: 172.16.0.67
   tasks:
-    - name: Check if nginx.exe exists
-      win_shell: Test-Path -Path 'C:\\Users\\Admin\\Downloads\\nginx\\nginx-1.18.0\\nginx.exe'
-      register: path_exists
+    - name: Ensure the download directory exists
+      ansible.windows.win_file:
+        path: C:\Users\Admin\Downloads
+        state: directory
 
-    - name: Print path check result
-      debug:
-        var: path_exists
+    - name: Download Nginx
+      ansible.windows.win_get_url:
+        url: https://nginx.org/download/nginx-1.18.0.zip
+        dest: C:\Users\Admin\Downloads\nginx.zip
 
-    - name: Start Nginx if executable exists
-      win_shell: Start-Process -FilePath 'C:\\Users\\Admin\\Downloads\\nginx\\nginx-1.18.0\\nginx.exe' -NoNewWindow -Wait
-      when: path_exists.stdout == "True"
+    - name: Extract Nginx
+      ansible.windows.win_shell: |
+        Expand-Archive -Path C:\Users\Admin\Downloads\nginx.zip -DestinationPath C:\Users\Admin\Downloads\nginx
+
+    - name: Check if Nginx executable exists
+      ansible.windows.win_shell: Test-Path -Path 'C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe'
+      register: nginx_executable_exists
+
+    - name: Debug: Nginx executable exists
+      ansible.builtin.debug:
+        var: nginx_executable_exists
+
+    - name: Install Nginx
+      ansible.windows.win_shell: Start-Process -FilePath 'C:\Users\Admin\Downloads\nginx\nginx-1.18.0\nginx.exe' -NoNewWindow -Wait
+      when: nginx_executable_exists.stdout == "True"
+
+    - name: Start Nginx service
+      ansible.windows.win_service:
+        name: nginx
+        state: started
+        start_mode: auto
+      when: nginx_executable_exists.stdout == "True"
