--- a/nginx-install.yml
+++ b/nginx-install.yml
@@ -41,13 +41,13 @@
 
     - name: Unzip nginx
       community.windows.win_unzip:
-        src: C:\User\Admin\Downloads\nginx.zip
-        dest: C:\nginx
-        creates: C:\nginx\nginx-1.18.0\nginx.exe
+        src: C:\Users\Admin\Downloads\nginx.zip
+        dest: C:\Users\Admin\Downloads
+        creates: C:\Users\Admin\Downloads\nginx-1.18.0\nginx.exe
 
     - name: Verify nginx.exe exists
       ansible.windows.win_stat:
-        path: C:\nginx\nginx-1.18.0\nginx.exe
+        path: C:\Users\Admin\Downloads\nginx-1.18.0\nginx.exe
       register: nginx_exe
 
     - name: Debug nginx.exe existence
@@ -56,5 +56,5 @@
 
     - name: Start nginx
       ansible.windows.win_shell: |
-        Start-Process -NoNewWindow -FilePath "C:\nginx\nginx-1.18.0\nginx.exe"
+        Start-Process -NoNewWindow -FilePath "C:\Users\Admin\Downloads\nginx-1.18.0\nginx.exe"
       when: nginx_exe.stat.exists
